--- a/冯娆/practice/conf/config.properties
+++ b/冯娆/practice/conf/config.properties
@@ -1,4 +1,7 @@
-base_url=http://study-perf.qa.netease.com
+gecko_driver=D:\\class\\geckodriver.exe
+firefox_path=C:\\Program Files\\Mozilla Firefox\\firefox.exe
+driverType=firefox
+Front_url=http://localhost:9999/index.php
 enable_email=true
 success_to_mail=1397486043@qq.com
 from_mail=f1397486043@126.com
